alignment fix

--- a/bootstrap/assets/stylesheets/bootstrap/_dr-pages.scss
+++ b/bootstrap/assets/stylesheets/bootstrap/_dr-pages.scss
@@ -825,7 +825,7 @@ padding-bottom: 25%;
 }
 .owl-animated-in {
   z-index: 0;
-}
+} 
 .owl-animated-out {
   z-index: 1;
 }
@@ -1709,7 +1709,7 @@ padding-bottom: 0;
     min-height: 157px;
         }
         p {
-    display: table-cell;
+
     vertical-align: middle;
     text-align: center;
     font-size: 1.75em;
